# libraryservice

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
client/: BUILD  BUILD.bazel  main.go
proto/: BUILD  library_service.proto
proto/api/: BUILD.bazel  api.pb.go  api.proto  api_grpc.pb.go
proto/internal/: BUILD  library.proto
proto/storage/: BUILD  BUILD.bazel  library.proto  storage.pb.go  storage.proto
server/: BUILD  BUILD.bazel  main.go
tests/: BUILD.bazel  clientserver_test.go
tests/fakegrpc/: BUILD.bazel  fakegrpc.go
