load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ghasemloo/libraryservice/client",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:library_service_proto",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "client",
    importpath = "github.com/ghasemloo/libraryservice/client",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
