load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:private"])

proto_library(
    name = "api_proto",
    srcs = ["api.proto"],
    visibility = ["//visibility:private"],
)

go_proto_library(
    name = "api_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/ghasemloo/libraryservice/proto/api",
    proto = ":api_proto",
    visibility = ["//visibility:private"],
)

go_library(
    name = "go_default_library",
    embed = [":api_go_proto"],
    importpath = "github.com/ghasemloo/libraryservice/proto/api",
    visibility = [
        "//:__subpackages__",
    ],
)
