load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:private"])

proto_library(
    name = "storage_proto",
    srcs = ["storage.proto"],
    visibility = ["//visibility:private"],
)

go_proto_library(
    name = "storage_go_proto",
    importpath = "github.com/ghasemloo/libraryservice/proto/storage",
    proto = ":storage_proto",
    visibility = ["//visibility:private"],
)

go_library(
    name = "go_default_library",
    embed = [":storage_go_proto"],
    importpath = "github.com/ghasemloo/libraryservice/proto/storage",
    visibility = ["//server:__subpackages__"],
)
