load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["fakegrpc.go"],
    importpath = "github.com/ghasemloo/libraryservice/tests/fakegrpc",
    visibility = ["//tests:__subpackages__"],
    deps = ["@org_golang_google_grpc//:go_default_library"],
)
